FIX: regex for wrapFirstLetter and bodyClass

--- a/common/common.scss
+++ b/common/common.scss
@@ -275,14 +275,9 @@
   }
 
   &__drop-cap {
-    article#post_1 {
-      .cooked + p::first-letter,
-      p:empty + p::first-letter {
-        font-size: var(--font-up-6);
-        margin-right: 0.1em;
-        line-height: 1;
-      }
-    }
+    font-size: var(--font-up-6);
+    margin-right: 0.1em;
+    line-height: 1;
   }
 
   article#post_1 {
